Fixed highlight color again for dark mode

--- a/resources/components/darkmode.less
+++ b/resources/components/darkmode.less
@@ -172,7 +172,7 @@
 
 	a.mw-wiki-title,
 	.mw-body-content #mw-content-text .mw-parser-output #toc a {
-		color: @dark-text-70 !important;
+		color: @dark-text-70;
 	}
 
 	.mw-body-content #mw-content-text .mw-parser-output #toc {
